# prima-international

./: .gitignore  README.md  TODO.txt  constants.ts  dbLoose.txt  dbTight.txt  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.mjs  tenmachines.json  tsconfig.json  vitest.config.ts
app/: app.vue
app/components/: Button.vue  ConfirmationButton.vue  ConfirmationIconButton.vue  DividerLine.vue  Footer.vue  MachineCard.vue  Navbar.vue  Notification.vue  Notifications.vue
app/composables/: machineCrud.ts  useApiBase.ts  useMachineCrud.ts  useManualSync.ts  useOfflineDb.ts  useOfflineSnapshot.ts
app/middleware/: auth.global.ts  filters.global.ts
app/pages/: detail.vue  index.vue  login.vue  manage.vue  tempdetail.vue
app/plugins/: apiBase.client.ts  apiBase.server.ts  offline-api.client.ts  offline-sync.client.ts
assets/css/: main.css
components/: DividerLine.vue  Footer.vue  MachineCard.vue  Navbar.vue
components/filter/: Location.vue  Model.vue  Tab.vue  Tabs.vue  Type.vue
components/form/: AddMachine.vue  Archive.vue  Contact.vue  Machine.vue  (+4 more)
interfaces/: db.ts  fe.ts
middleware/: filters.global.ts
pages/: detail.vue  index.vue  inventory.vue  manage.vue  view.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  lib_sqlite.rs  local_db.rs  offline.rs
stores/: machine.ts  notification.ts  offline.ts
temp/: machines.ts
test/: README.md  api.machines.byId.spec.ts  api.machines.create.validation.spec.ts  api.machines.filters.spec.ts  api.machines.list.spec.ts  setup.ts  tsconfig.json
(+107 files in other folders)
